@@ -74,6 +74,7 @@ Misc:
  - All: Threads are now named
  - Qt: Rename "Fullscreen" to "Toggle fullscreen"
  - Qt: Don't save window size when entering fullscreen
+ - Qt: Make the default fullscreen binding for Windows be Alt-Enter
 
 0.2.1: (2015-05-13)
 Bugfixes:
